improved frontend of website
imporved the frontend desine(css) of the wrbsite

--- a/IRIS_WEB/IRIS-Frontend/index.html
+++ b/IRIS_WEB/IRIS-Frontend/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IRIS</title>
-    <link rel="stylesheet" href="index.css">
-    
+    <link rel="stylesheet" href="index.css"> 
 
 </head>
 <body>
     <header>
         <h1>IRIS</h1>
+        <h2>Intelligent Realtime Inspection System</h2>
     </header>
     <section>
-        <div id="main">
+        <div class="main">
             <div class="second form-control" onload="check()"></div>
             <div class="a"></div>
             <!-- <button id="start-stop" class="btn form-control" onclick="stopTimerButton()">Stop</button> -->
