--- a/IRIS_WEB/IRIS-Frontend/index.html
+++ b/IRIS_WEB/IRIS-Frontend/index.html
@@ -17,7 +17,9 @@
             <div class="second form-control" onload="check()"></div>
             <div class="a"></div>
             <!-- <button id="start-stop" class="btn form-control" onclick="stopTimerButton()">Stop</button> -->
-            <button id="script-run" class="btn form-control" onclick="scriptNotRunning()" disabled>Stop Script</button>
+            <button id="script-run" class="btn form-control" onclick="scriptNotRunning()" disabled>Click to disable email service</button>
+            <div class = "res"></div>
+
         </div>
 
     </section>
